--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <!--bootstrap connection-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <title>Photo Magic</title>
 </head>
 
 <body>
+    <!--the options in the top right corner-->
     <nav class="nav">
         <div class="logo">Photo<span>Magic</span></div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="#home">Home</a></li>
-            <li class="nav-link"><a href="#about">About</a></li>
-            <li class="nav-link"><a href="#gallery">Gallery</a></li>
-            <li class="nav-link"><a href="#contact">Contact</a></li>
+            <li class="link"><a href="#home">Home</a></li>
+            <li class="link"><a href="#about">About</a></li>
+            <li class="link"><a href="#gallery">Gallery</a></li>
+            <li class="link"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
+    <!--The middle section of the webpage-->
     <section class="hero" id="home">
         <div class="hero-container">
             <div class="hero-main">
@@ -35,6 +39,7 @@
         </div>
     </section>
 
+    <!--the "About Us" section -->
     <section class="about" id="about">
         <div class="section-title">About <span>Us</span></div>
         <div class="section-sub">Get to know what defines PhotoMagic</div>
@@ -57,6 +62,7 @@
         </div>
     </section>
 
+    <!--the "Gallery" section-->
     <section class="gallery" id="gallery">
         <div class="section-title">Our <span>Gallery</span></div>
         <div class="section-sub">Check out our latest projects</div>
@@ -93,6 +99,7 @@
         </div>
     </section>
 
+    <!--the "Contact Us" section-->
     <section class="contact" id="contact">
         <div class="section-title">Contact <span>Us</span></div>
         <div class="section-sub">Dont forget to drop us a message</div>
@@ -122,7 +129,7 @@
     </section>
 
     <footer class="footer">
-        Copyright &copy; 2023. Made by <span>Mohammed Siyan</span>.
+        Copyright &copy; 2023. Made by <span>Rodrick</span>.
     </footer>
 
 </body>
